<resources>
    <string name="app_name">BWell</string>

    <!-- Notification -->
    <string name="notification_msg">It\'s time to finish %s !</string>
    <string name="habit_notification_channel_id" translatable="false">habit_channel</string>
    <string name="habit_notification_channel_name" translatable="true">Habit</string>

    <!-- Top bar -->
    <string name="create_habit">Set up your habit</string>
    <string name="account">Manage your account</string>
    <string name="settings">Application Settings</string>
    <string name="back_bth_content_des">Back to dashboard</string>

    <!-- create habit -->
    <string name="setup_name_hint">Name your habit here</string>
    <string name="habit_type_label">Choose your habit type</string>
    <string name="notification_time_label">Set notification time</string>
    <string name="time_picker_btn_label">Open time picker</string>
    <string name="add_habit_btn_label">Add habit</string>

    <!-- Dashboard -->
    <string name="dashboard">Your tracking habits</string>
    <string name="progress_text">%d%% Completed</string>
    <plurals name="day_left">
        <item quantity="one">%d day left</item>
        <item quantity="other">%d days left</item>
    </plurals>
    <string name="finished">Congratulations, you\'ve finished it</string>

    <!-- habit details -->
    <string name="example_habit">Example Habit</string>
    <string name="keep_up">Keep it up!</string>
    <string name="done_btn">Done for today</string>
    <string name="snooze_btn">Snooze for today</string>
    <string name="customize_btn">Customize habit</string>
    <string name="ask_to_confirm_title">Are you sure?</string>
    <string name="confirm_snooze_text">If you snooze this time,\nYou will lose all of your habit record! </string>

    <!-- habit customize -->
    <string name="customize_title">Customize %s</string>
    <string name="delete_habit">Delete this habit</string>
    <string name="tap_time_change">Tap to change notice time</string>
    <string name="notification_time">Notification time %s</string>
    <string name="confirm_delete_text">This process cannot be undone!</string>

    <!-- Login Activity -->
    <string name="login_google">Log in with google account</string>

    <!-- Account Fragment -->
    <string name="sign_out">Sign out</string>

    <!-- Setting Fragment -->
    <string name="reset">Reset All Data</string>
    <string name="backup">Back up to cloud</string>
    <string name="restore">Restore from cloud</string>
    <string name="backup_success">Back up success!</string>
    <string name="backup_fail">Back up failed! Please try again later</string>
    <string name="restore_success">Restore from cloud success!</string>
    <string name="restore_fail">Restore failed! Please try again later</string>
    <string name="restore_confirm">Warning! The local data will be overwritten by cloud data</string>
    <string name="error">Error!</string>
    <string name="try_to_connect">Trying to connect server, Please check the connection</string>

</resources>