<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.habitDetail.HabitDetailFragment">

    <data>
        <variable
            name="habitDetailViewModel"
            type="com.jguzaa.bwell.fragments.habitDetail.HabitDetailViewModel" />
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
        >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:overScrollMode="ifContentScrolls">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/topBar"
                    android:background="@color/deep_orange_400"
                    android:padding="16dp">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/back_btn"
                        android:src="@drawable/ic_back"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:background="@color/deep_orange_400"
                        android:contentDescription="@string/back_bth_content_des" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/example_habit"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        app:layout_constraintStart_toEndOf="@id/back_btn"
                        app:layout_constraintTop_toTopOf="@id/back_btn"
                        app:layout_constraintBottom_toBottomOf="@id/back_btn"
                        android:layout_marginStart="16dp"
                        android:text="@{habitDetailViewModel.habit.name}"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="48dp">

                    <FrameLayout
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_box"
                        android:id="@+id/progressBar"/>

                    <LinearLayout
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_stroke">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="16dp"
                            android:id="@+id/habit_icon"
                            tools:src="@drawable/clock"
                            android:importantForContentCapture="no"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/day_left"
                            tools:text="20 days left"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:layout_marginStart="16dp"/>

                    </LinearLayout>

                </FrameLayout>

                <TextView
                    android:id="@+id/complete_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    tools:text="@string/progress_text"
                    android:textSize="32sp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/keep_up"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:layout_marginTop="16dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/finish_btn"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/done_btn"
                    android:onClick="@{() -> habitDetailViewModel.todayFinish()}"
                    android:enabled="@{!habitDetailViewModel.habit.todayFinished}"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/snooze_btn"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/snooze_btn" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/customize_btn"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/customize_btn"/>

            </LinearLayout>

        </ScrollView>

</layout>