<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HabitCustomizeFragment">

    <data>
        <variable
            name="habitDetailViewModel"
            type="com.jguzaa.bwell.fragments.habitDetail.HabitDetailViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topBar"
            android:background="@color/deep_orange_400"
            android:padding="16dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/back_btn"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/deep_orange_400"
                android:contentDescription="@string/back_bth_content_des" />

            <TextView
                android:id="@+id/habit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/example_habit"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@id/back_btn"
                app:layout_constraintTop_toTopOf="@id/back_btn"
                app:layout_constraintBottom_toBottomOf="@id/back_btn"
                android:layout_marginStart="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:id="@+id/time_change_tab">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:src="@drawable/clock"
                android:importantForAccessibility="no"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/notification_time_customize"
                    tools:text="@string/notification_time"
                    android:textSize="16sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tap_time_change"
                    android:textSize="16sp"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:id="@+id/delete_tab">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:src="@drawable/minus"
                android:importantForAccessibility="no"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/delete_habit"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginStart="8dp"/>

        </LinearLayout>


    </LinearLayout>

</layout>